Started doing the landing page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@
     </header>  
     
     <main class="main">
-
+        <!-- Landing Page -->
+        <div class="landingPage">
+            <span class="shadowName">CAMS</span>
+            <h1>Hello, it's me <span>Camille</span><span>.</span></h1>
+            <h2>A self-taught front-end web developer.</h2>
+            <h4>I graduated as Magna Cum Laude in my Finance degree and worked in the field of Finance and Accounting for more than two years. In 2021, I took a chance and taught myself web development to pivot my career trajectory. </h4>
+        </div>
     </main>
 
     <!-- ========================= FOOTER ========================= -->
