--- a/index.html
+++ b/index.html
@@ -53,10 +53,23 @@
     <main class="main">
         <!-- Landing Page -->
         <div class="landingPage">
-            <span class="shadowName">CAMS</span>
-            <h1>Hello, it's me <span>Camille</span><span>.</span></h1>
-            <h2>A self-taught front-end web developer.</h2>
-            <h4>I graduated as Magna Cum Laude in my Finance degree and worked in the field of Finance and Accounting for more than two years. In 2021, I took a chance and taught myself web development to pivot my career trajectory. </h4>
+            <div class="side-bar">
+                <img class="sidebar-line" src="./assets/img/sidebar-line.png" alt="">
+                <img class="socmed-logo" src="./assets/img/behance-logo-light.png" alt="">
+                <img class="socmed-logo" src="./assets/img/instagram-logo-light.png" alt="">
+                <img class="socmed-logo" src="./assets/img/dribbble-logo-light.png" alt="">
+                <img class="sidebar-line" src="./assets/img/sidebar-line.png" alt="">
+            </div>
+            <div class="introduction">
+                <span class="shadowName">CAMS</span>
+                <h1>Hello, it's me <span class="my-name">Camille</span><span>.</span></h1>
+                <h2>A self-taught front-end web developer.</h2>
+                <h4>I graduated as Magna Cum Laude in my Finance degree and worked in the field of Finance and Accounting for more than two years. In 2021, I took a chance and taught myself web development to pivot my career trajectory. </h4>
+            </div>
+
+            <div class="heading-logo">
+                <img src="./assets/img/landing-page-header.png" alt="">
+            </div>
         </div>
     </main>
 
