--- a/index.html
+++ b/index.html
@@ -65,11 +65,17 @@
                 <h1>Hello, it's me <span class="my-name">Camille</span><span>.</span></h1>
                 <h2>A self-taught front-end web developer.</h2>
                 <h4>I graduated as Magna Cum Laude in my Finance degree and worked in the field of Finance and Accounting for more than two years. In 2021, I took a chance and taught myself web development to pivot my career trajectory. </h4>
+                <div class="landingPage-btns">
+                    <button class="btn-items">Hire Me</button>
+                    <button class="btn-items">Know More!</button>
+                </div>
             </div>
 
             <div class="heading-logo">
                 <img src="./assets/img/landing-page-header.png" alt="">
             </div>
+
+            
         </div>
     </main>
 
